--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<meta name="mobile-web-app-capable" content="yes"/>
 	<meta name="apple-mobile-web-app-capable" content="yes"/>
 	<title>SubSynth</title>
-	<script defer src="/js/polyfill.min.js"></script>
-	<script defer src="/js/app.js"></script>
-	<link rel="stylesheet" href="/css/app.css"/>
-	<meta property="og:image" content="/img/icon.png"/>
-	<link rel="icon" sizes="180x180" href="/img/icon.png"/>
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/icon.png"/>
+	<script defer src="./js/polyfill.min.js"></script>
+	<script defer src="./js/app.js"></script>
+	<link rel="stylesheet" href="./css/app.css"/>
+	<meta property="og:image" content="./img/icon.png"/>
+	<link rel="icon" sizes="180x180" href="./img/icon.png"/>
+	<link rel="apple-touch-icon" sizes="180x180" href="./img/icon.png"/>
 </head>
 <body>
 </body>
